# uwsfbcvm

./: AUTHORS  ChangeLog  README.md  configure.ac
.github/scripts/: uwsfbcvm-build.sh  uwsfbcvm-test-standalone.sh  uwsfbcvm-test-ucvm.sh  uwsfcvm-build.sh  uwsfcvm-test-ucvm.sh
.github/workflows/: uwsfbcvm-ci.yml  uwsfbcvm-ucvm-ci.yml  uwsfcvm-ci.yml  uwsfcvm-ucvm-ci.yml
data/: Makefile.am  config  config-o  config_BayAreaModel  make_data_files.py  query_data_file.py
src/: Makefile.am  sfbcvm.c  sfbcvm.h  uwsfbcvm.c  uwsfbcvm.h
test/: Makefile  Makefile.am  Makefile.in  r  result_unit.txt  run_unit  test_api.c
test/.deps/: test_api.Po
tests/: Makefile.am  run_test_sfbcvm.sh  run_test_uwsfbcvm.sh  test_api.c
